# RBCM-edge

./: .gitignore  README.md  pyproject.toml  requirements.txt
MEA_analysis/: README.md  mea_data_utils.py  run_MEA_final_UME_CME_trajectory_analysis.py  run_MEA_grid_full_analysis.py
MEA_analysis/archive_exploratory/code/: run_MEA_permutation_directional_region_analysis.py  run_MEA_permutation_directional_region_start50_analysis.py  run_MEA_permutation_log_onoff_ratio_analysis.py  run_MEA_permutation_window_phase_analysis.py  run_MEA_trajectory_focused_selector.py  run_MEA_trajectory_focused_selector_resume.py  run_MEA_trajectory_parameter_scan.py
configs/: datasets.yaml  mea_analysis.yaml  rbcm_fuse.yaml
docs/: engineering_notes.md  research_context.md
edge_model/: README.md  __init__.py  evaluate.py  infer.py  train.py
edge_model/configs/: eval_cross_dataset.yaml  local_3070ti.yaml  server_4090.yaml
edge_model/core/: __init__.py  config.py  paths.py  seed.py
edge_model/data/: __init__.py  build.py  edge_dataset.py  transforms.py
edge_model/engine/: __init__.py  metrics.py  train_loop.py  visualize.py
edge_model/models/: __init__.py  build.py
edge_model/tools/: analyze_training_log.py  check_dataloader.py  inspect_edge_data.py
scripts/checks/: check_mea_metrics.py  check_rbcm_shapes.py
scripts/mea/: build_response_tables.py  inspect_mea_tree.py  plot_quicklook.py
scripts/model/: run_rbcm_smoke_check.py  smoke_test_rbcm.py
src/rbcm_edge/: __init__.py  cli.py  config.py
tests/: test_mea_metrics.py  test_rbcm_shapes.py
(+36 files in other folders)
