[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RBCM-edge"
version = "0.1.0"
description = "Retina-inspired boundary-context modulation for generalized edge detection."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Kenda" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
